--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 {
     "routes": [
       { "handle": "filesystem" },
-      { "src": "/(.*)", "status": 404, "dest": "" }
+      { "src": "/(.*)", "status": 404, "dest": "index.html" }
     ]
   }
   
