--- a/package.json
+++ b/package.json
@@ -7,12 +7,13 @@
     "serve": "vite preview"
   },
   "dependencies": {
+    "sass": "^1.49.11",
     "vue": "^3.1.4",
     "vue-router": "^4.0.14"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "^1.4.0",
+    "@vitejs/plugin-vue": "^1.2.4",
     "@vue/compiler-sfc": "^3.1.4",
-    "vite": "^2.8.6"
+    "vite": "^2.3.8"
   }
 }
