--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "dependencies": {
     "sass": "^1.51.0",
     "vue": "^3.1.4",
-    "vue-router": "^4.0.14"
+    "vue-router": "^4.0.14",
+    "express": "^4.18.1"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^1.4.0",
