--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "sass": "^1.51.0",
     "vue": "^3.1.4",
     "vue-router": "^4.0.14",
-    "express": "^4.18.1"
+    "express": "^4.18.1",
+    "cookie-parser": "^1.4.6",
+    "jsonwebtoken": "^8.5.1",
+    "node-fetch": "^2.6.7"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^1.4.0",
